[package]
name = "checkers"
version = "0.1.0"
authors = ["Enn Michael <enntheprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix="0.9.0"
serde = "1.0.114"
log = "0.4.0"
env_logger = "0.7.1"
