[package]
name = "checkers"
version = "0.1.0"
authors = ["Enn Michael <enntheprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix="0.9.0"
serde = "1.0.114"
serde_json = "1.0.56"
log = "0.4.0"
env_logger = "0.7.1"
futures = "0.3.5"
actix-web-actors = "2.0.0"
actix-files = "0.2.2"
actix-http = "1.0.1"
rand = "0.7.3"
pnet = "0.27.2"
